# uv-irradiator

./: .clang-format  .gitignore  README.md
3dmodel/: back_case.step  controller.py  front_panel.step  plate_err.step  plate_out.step  requirements.txt  sw_key1.step  sw_key2.step  sw_key3.step  venv-setup.shrc
3dmodel/step/: back_case.step  front_panel.step  plate_err.step  plate_out.step  sw_key1.step  sw_key2.step  sw_key3.step
circuit/uv_irradiator/: uv_irradiator.kicad_prl  uv_irradiator.kicad_pro  uv_irradiator.kicad_sch
firmware/: CMakeLists.txt  Makefile
firmware/debug/wsl/: debug.sample.mk
firmware/include/uv_irradiator/: hw_config.hpp  hw_test.hpp  lgfx_ssd1306.hpp
firmware/src/: hw_test.cpp  uv_irrigator.cpp
